# DjangoRESTFrameworkHomeWork

./: .env.example  .gitignore  README.md  celery_worker.py  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_subscription.py
materials/tests/: test_materials.py
payments/: apps.py  models.py  services.py  tasks.py  urls.py  views.py
payments/migrations/: 0001_initial.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/fixtures/: groups.json  payments.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_customuser_managers.py
